fixed minor text sizing and spacing

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -19,7 +19,8 @@ h1 {
     color:whitesmoke;
 }
 h4 {
-    color: whitesmoke;
+    
+    color: #659797;
 }
 h5 {
     color: #659797;
